modules/openshift/02-sec-grps.tf
#### Security Groups ####

# Bastion Host
resource "aws_security_group" "bastion" {
  name        = "${var.username}-ocp-sg-basstion"
  description = "Bastion Host"
  vpc_id      = "${aws_vpc.ocp.id}"

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["${var.vpc_cidr}"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = "${merge(
    local.common_tags,
    map(
      "Name", "${var.username}-ocp-sg-bastion"
    )
  )}"
}

# Master Node
resource "aws_security_group" "master" {
  name        = "${var.username}-ocp-sg-master"
  description = "Master Node"
  vpc_id      = "${aws_vpc.ocp.id}"

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["${var.vpc_cidr}"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8443
    to_port     = 8443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 10250
    to_port     = 10250
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = "${merge(
    local.common_tags,
    map(
      "Name", "${var.username}-ocp-sg-master"
    )
  )}"
}

# Worker Nodes
resource "aws_security_group" "worker" {
  name        = "${var.username}-ocp-sg-worker"
  description = "Worker Node"
  vpc_id      = "${aws_vpc.ocp.id}"

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["${var.vpc_cidr}"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = "${merge(
    local.common_tags,
    map(
      "Name", "${var.username}-ocp-sg-worker"
    )
  )}"
}
